# ModernOpenKarto

./: CMakeLists.txt
cmake/: OpenKartoConfig.cmake.in
docs/: MIGRATION.md
examples/: CMakeLists.txt  rplidar_slam_demo.cpp
include/: AbstractGpsEstimationManager.h  Any.h  CoordinateConverter.h  Dataset.h  Deprecated.h  Event.h  Exception.h  Geometry.h  Grid.h  GridIndexLookup.h  Identifier.h  KartoMath.h  KartoString.h  List.h  Logger.h  Macros.h  Meta.h  MetaAttribute.h  MetaClass.h  MetaClassManager.h  MetaEnum.h  MetaEnumHelper.h  MetaEnumManager.h  MetaType.h  Module.h  Mutex.h  Object.h  Objects.h  OccupancyGrid.h  OpenKarto.h  OpenMapper.h  Pair.h  Parameter.h  PoseTransform.h  RangeTransform.h  Referenced.h  RigidBodyTransform.h  Sensor.h  SensorData.h  SensorRegistry.h  (+4 more)
src/: Any.cpp  Dataset.cpp  Event.cpp  Exception.cpp  Geometry.cpp  Grid.cpp  GridIndexLookup.cpp  Identifier.cpp  Logger.cpp  Meta.cpp  MetaAttribute.cpp  MetaClass.cpp  MetaClassManager.cpp  MetaEnum.cpp  MetaEnumHelper.cpp  MetaEnumManager.cpp  Module.cpp  Mutex.cpp  Object.cpp  Objects.cpp  OccupancyGrid.cpp  OpenKarto.cpp  OpenMapper.cpp  Parameter.cpp  PoseTransform.cpp  RangeTransform.cpp  Referenced.cpp  RigidBodyTransform.cpp  Sensor.cpp  SensorData.cpp  SensorRegistry.cpp  String.cpp  StringHelper.cpp
test/: CMakeLists.txt  test_360_lidar.cpp  test_any_removal.cpp  test_geometry.cpp  test_mapper_smoke.cpp  test_meta_removal.cpp  test_parallel_scan_match.cpp  test_placeholder.cpp  test_string_conversion.cpp  test_types.cpp
